--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -23,7 +23,7 @@ STR_PARAM_E88A9CA_ENABLE_ROADSTOP_ENABLED   :启用
 STR_PARAM_E88A9CA_ENABLE_ROADSTOP_DISABLED  :禁用
 
 STR_PARAM_E88A9CA_INTRODUCTION_YEAR         :芜湖站 - 可建造年份
-STR_PARAM_E88A9CA_INTRODUCTION_YEAR_DESC    :选择芜湖站从哪一年开始可以被建造。{}{}注意：本选项是否生效由“全局设置 - 限定可建造年份”所控制。
+STR_PARAM_E88A9CA_INTRODUCTION_YEAR_DESC    :选择芜湖站从哪一年开始可以被建造。{}{}如果想要拟真的话，您可以把本选项设置为 2005 年附近的年份。
 
 STR_PARAM_E88A9C0_ENABLE_MODULAR            :芜湖站 (1934) - 启用
 STR_PARAM_E88A9C0_ENABLE_MODULAR_DESC       :选择是否启用芜湖站 (1934)
@@ -31,7 +31,7 @@ STR_PARAM_E88A9C0_ENABLE_MODULAR_ENABLED    :启用
 STR_PARAM_E88A9C0_ENABLE_MODULAR_DISABLED   :禁用
 
 STR_PARAM_E88A9C0_INTRODUCTION_YEAR         :芜湖站 (1934) - 可建造年份
-STR_PARAM_E88A9C0_INTRODUCTION_YEAR_DESC    :选择芜湖站 (1934)从哪一年开始可以被建造。{}{}注意：本选项是否生效由“全局设置 - 限定可建造年份”所控制。
+STR_PARAM_E88A9C0_INTRODUCTION_YEAR_DESC    :选择芜湖站 (1934)从哪一年开始可以被建造。{}{}如果想要拟真的话，您可以把本选项设置为 1910 年附近的年份。
 
 STR_PARAM_E88A9CP_ENABLE_MODULAR            :站台地块 - 启用
 STR_PARAM_E88A9CP_ENABLE_MODULAR_DESC       :选择是否启用可建造的站台地块
