--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -1,5 +1,5 @@
 ##grflangid 0x56
-STR_GRF_NAME                    :中国包：车站 - 芜湖 {WHITE}0.3.0-indev
+STR_GRF_NAME                    :中国包：车站 - 芜湖 {WHITE}0.3.0
 STR_GRF_DESC                    :{}{PUSH_COLOUR}{GOLD}中国{RED}包{POP_COLOUR}：车站 - {PUSH_COLOUR}{SILVER}芜湖 {WHITE}0.3.0-indev{POP_COLOUR}{}{}本 NewGRF 是 {PUSH_COLOUR}{GOLD}中国{RED}包{POP_COLOUR}：车站 (CNS) 的扩展包，提供基于{PUSH_COLOUR}{SILVER}芜湖{POP_COLOUR}的火车站的模块化地块和车站模版。{}{}{PUSH_COLOUR}{WHITE}贡献者{POP_COLOUR}:{}Ahyangyi, WenSim.{}{}在 {PUSH_COLOUR}{SILVER}GPL v2{POP_COLOUR} 下分发。
 
 STR_PARAM_INTRODUCTION_YEAR             :全局设置 - 车站可建造年份
