--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -58,8 +58,15 @@ STR_PARAM_SHELTER_SHELTER_2_DESC            :Whether or not to enable shelter st
 STR_PARAM_SHELTER_SHELTER_2_ENABLED         :Enabled
 STR_PARAM_SHELTER_SHELTER_2_DISABLED        :Disabled
 
-STR_STATION_DEFAULT                             :Station Building
-STR_STATION_UNTRAVERSABLE                       :Station Building (No Track)
+STR_PART_TRACK_TRUE                         :{PUSH_COLOUR}{GREEN}Tra{POP_COLOUR}
+STR_PART_TRACK_FALSE                        :{PUSH_COLOUR}{RED}Tra{POP_COLOUR}
+STR_PART_NPLAT_TRUE                         :{PUSH_COLOUR}{GREEN}Nor{POP_COLOUR}
+STR_PART_NPLAT_FALSE                        :{PUSH_COLOUR}{RED}Nor{POP_COLOUR}
+STR_PART_SPLAT_TRUE                         :{PUSH_COLOUR}{GREEN}Sou{POP_COLOUR}
+STR_PART_SPLAT_FALSE                        :{PUSH_COLOUR}{RED}Sou{POP_COLOUR}
+
+STR_STATION_TEMPLATE                        :Station Building ({0:STRING}{1:STRING}{2:STRING})
+
 STR_STATION_PLATFORM                            :Platform
 STR_STATION_PLATFORM_UNTRAVERSABLE              :Platform (No Track)
 STR_STATION_CONCOURSE                           :Concourse
