--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -165,7 +165,7 @@ STR_STATION_CLASS_E7B981W       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}繁昌西
 STR_STATION_CLASS_E88A9CP       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖包 - 站台
 
 STR_OBJECT_CLASS_E88A9CG        :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站 - 西广场 - 地面
-STR_OBJECT_CLASS_E88A9CF        :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站 - 西广场 - 花坛
+STR_OBJECT_CLASS_E88A9CF        :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站 - 西广场 - 绿雕
 STR_OBJECT_CLASS_E88A9CL        :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站 - 西广场 - 路灯
 STR_ROADSTOP_CLASS_E88A9CR      :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站
 
