--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -165,7 +165,7 @@ STR_STATION_CLASS_E7B981W       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Fanchang W
 STR_STATION_CLASS_E88A9CP       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu - Extra Platforms
 
 STR_OBJECT_CLASS_E88A9CG        :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu Station - West Square - Ground
-STR_OBJECT_CLASS_E88A9CF        :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu Station - West Square - Flowerbed
+STR_OBJECT_CLASS_E88A9CF        :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu Station - West Square - Topiary
 STR_OBJECT_CLASS_E88A9CL        :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu Station - West Square - Light Post
 STR_ROADSTOP_CLASS_E88A9CR      :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu
 
