--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -166,6 +166,7 @@ STR_STATION_CLASS_E88A9CP       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖包
 
 STR_OBJECT_CLASS_E88A9CG        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 西广场 - 地面
 STR_OBJECT_CLASS_E88A9CF        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 西广场 - 绿雕
+STR_OBJECT_CLASS_E88A9Cl        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 西广场 - 草坪
 STR_OBJECT_CLASS_E88A9CL        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 西广场 - 路灯
 STR_ROADSTOP_CLASS_E88A9CR      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站
 
