--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -168,6 +168,7 @@ STR_OBJECT_CLASS_E88A9CG        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 
 STR_OBJECT_CLASS_E88A9CF        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 西广场 - 绿雕
 STR_OBJECT_CLASS_E88A9Cl        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 西广场 - 草坪
 STR_OBJECT_CLASS_E88A9CL        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 西广场 - 路灯
+STR_OBJECT_CLASS_E88A9CM        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 西广场 - 综合
 STR_ROADSTOP_CLASS_E88A9CR      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站
 
 STR_METASTATION_CLASS_E88A9CA   :芜湖站 (2015)
