--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -66,6 +66,7 @@ STR_PART_SPLAT_TRUE                         :{PUSH_COLOUR}{GREEN}Sou{POP_COLOUR}
 STR_PART_SPLAT_FALSE                        :{PUSH_COLOUR}{RED}Sou{POP_COLOUR}
 
 STR_STATION_TEMPLATE                        :Station Building ({0:STRING}{1:STRING}{2:STRING})
+STR_STATION_BUILDING                        :Station Building
 
 STR_STATION_PLATFORM                            :Platform
 STR_STATION_PLATFORM_UNTRAVERSABLE              :Platform (No Track)
