--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -31,6 +31,20 @@ STR_PARAM_E88A9CA_COLOUR_PRIMARY            :Use Company Primary Colour
 STR_PARAM_E88A9CA_COLOUR_SECONDARY          :Use Company Secondary Colour
 STR_PARAM_E88A9CA_COLOUR_DARK_BLUE          :Dark Blue
 STR_PARAM_E88A9CA_COLOUR_PALE_GREEN         :Pale Green
+STR_PARAM_E88A9CA_COLOUR_PINK               :Pink
+STR_PARAM_E88A9CA_COLOUR_YELLOW             :Yellow
+STR_PARAM_E88A9CA_COLOUR_RED                :Red
+STR_PARAM_E88A9CA_COLOUR_LIGHT_BLUE         :Light Blue
+STR_PARAM_E88A9CA_COLOUR_GREEN              :Green
+STR_PARAM_E88A9CA_COLOUR_DARK_GREEN         :Dark Green
+STR_PARAM_E88A9CA_COLOUR_BLUE               :Blue
+STR_PARAM_E88A9CA_COLOUR_CREAM              :Cream
+STR_PARAM_E88A9CA_COLOUR_MAUVE              :Mauve
+STR_PARAM_E88A9CA_COLOUR_PURPLE             :Purple
+STR_PARAM_E88A9CA_COLOUR_ORANGE             :Orange
+STR_PARAM_E88A9CA_COLOUR_BROWN              :Brown
+STR_PARAM_E88A9CA_COLOUR_GREY               :Grey
+STR_PARAM_E88A9CA_COLOUR_WHITE              :White
 
 STR_PARAM_E88A9C0_ENABLE_MODULAR            :Wuhu Station (1934) - Enable
 STR_PARAM_E88A9C0_ENABLE_MODULAR_DESC       :Whether or not to enable Wuhu Station (1934)
@@ -46,6 +60,20 @@ STR_PARAM_E88A9C0_COLOUR_PRIMARY            :Use Company Primary Colour
 STR_PARAM_E88A9C0_COLOUR_SECONDARY          :Use Company Secondary Colour
 STR_PARAM_E88A9C0_COLOUR_DARK_BLUE          :Dark Blue
 STR_PARAM_E88A9C0_COLOUR_PALE_GREEN         :Pale Green
+STR_PARAM_E88A9C0_COLOUR_PINK               :Pink
+STR_PARAM_E88A9C0_COLOUR_YELLOW             :Yellow
+STR_PARAM_E88A9C0_COLOUR_RED                :Red
+STR_PARAM_E88A9C0_COLOUR_LIGHT_BLUE         :Light Blue
+STR_PARAM_E88A9C0_COLOUR_GREEN              :Green
+STR_PARAM_E88A9C0_COLOUR_DARK_GREEN         :Dark Green
+STR_PARAM_E88A9C0_COLOUR_BLUE               :Blue
+STR_PARAM_E88A9C0_COLOUR_CREAM              :Cream
+STR_PARAM_E88A9C0_COLOUR_MAUVE              :Mauve
+STR_PARAM_E88A9C0_COLOUR_PURPLE             :Purple
+STR_PARAM_E88A9C0_COLOUR_ORANGE             :Orange
+STR_PARAM_E88A9C0_COLOUR_BROWN              :Brown
+STR_PARAM_E88A9C0_COLOUR_GREY               :Grey
+STR_PARAM_E88A9C0_COLOUR_WHITE              :White
 
 STR_PARAM_E88A9CP_ENABLE_MODULAR            :Platform Tiles - Enable
 STR_PARAM_E88A9CP_ENABLE_MODULAR_DESC       :Whether or not to enable buildable platform tiles
