--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -25,6 +25,26 @@ STR_PARAM_E88A9CA_ENABLE_ROADSTOP_DISABLED  :禁用
 STR_PARAM_E88A9CA_INTRODUCTION_YEAR         :芜湖站 - 可建造年份
 STR_PARAM_E88A9CA_INTRODUCTION_YEAR_DESC    :选择芜湖站从哪一年开始可以被建造。{}{}如果想要拟真的话，您可以把本选项设置为 2005 年附近的年份。
 
+STR_PARAM_E88A9CA_COLOUR                    :芜湖站 - 装饰颜色
+STR_PARAM_E88A9CA_COLOUR_DESC               :选择芜湖站的装饰颜色。现实中的芜湖站的装饰部分是白色的，但是晚上会有彩灯显示各种颜色。
+STR_PARAM_STATION_COLOUR_PRIMARY            :使用公司主色调
+STR_PARAM_STATION_COLOUR_DARK_BLUE          :深蓝色
+STR_PARAM_STATION_COLOUR_PALE_GREEN         :浅绿色
+STR_PARAM_STATION_COLOUR_PINK               :粉红色
+STR_PARAM_STATION_COLOUR_YELLOW             :黄色
+STR_PARAM_STATION_COLOUR_RED                :红色
+STR_PARAM_STATION_COLOUR_LIGHT_BLUE         :淡蓝色
+STR_PARAM_STATION_COLOUR_GREEN              :绿色
+STR_PARAM_STATION_COLOUR_DARK_GREEN         :深绿色
+STR_PARAM_STATION_COLOUR_BLUE               :蓝色
+STR_PARAM_STATION_COLOUR_CREAM              :奶油色
+STR_PARAM_STATION_COLOUR_MAUVE              :深紫色
+STR_PARAM_STATION_COLOUR_PURPLE             :紫色
+STR_PARAM_STATION_COLOUR_ORANGE             :橘黄色
+STR_PARAM_STATION_COLOUR_BROWN              :棕色
+STR_PARAM_STATION_COLOUR_GREY               :浅灰色
+STR_PARAM_STATION_COLOUR_WHITE              :白色
+
 STR_PARAM_E88A9C0_ENABLE_MODULAR            :芜湖站 (1934) - 启用
 STR_PARAM_E88A9C0_ENABLE_MODULAR_DESC       :选择是否启用芜湖站 (1934)
 STR_PARAM_E88A9C0_ENABLE_MODULAR_ENABLED    :启用
