--- a/station/lang/traditional_chinese.lng
+++ b/station/lang/traditional_chinese.lng
@@ -51,7 +51,10 @@ STR_PARAM_E88A9C0_ENABLE_MODULAR_ENABLED    :啓用
 STR_PARAM_E88A9C0_ENABLE_MODULAR_DISABLED   :禁用
 
 STR_PARAM_E88A9C0_INTRODUCTION_YEAR         :蕪湖站 (1934) - 可建造年份
-STR_PARAM_E88A9C0_INTRODUCTION_YEAR_DESC    :選擇蕪湖站 (1934)從哪一年開始可以被建造。{}{}如果想要擬真的話，您可以把本選項設置爲 1910 年附近的年份。
+STR_PARAM_E88A9C0_INTRODUCTION_YEAR_DESC    :選擇蕪湖站 (1934) 從哪一年開始可以被建造。{}{}如果想要擬真的話，您可以把本選項設置爲 1910 年附近的年份。
+
+STR_PARAM_E88A9C0_COLOUR                    :蕪湖站 (1934) - 裝飾顏色
+STR_PARAM_E88A9C0_COLOUR_DESC               :選擇蕪湖站 (1934) 的窗戶和門的顏色。
 
 STR_PARAM_E88A9CP_ENABLE_MODULAR            :月台地塊 - 啓用
 STR_PARAM_E88A9CP_ENABLE_MODULAR_DESC       :選擇是否啓用可建造的月台地塊
