(station) Add parameters to override company colour for each station (#78)

--- a/station/lang/traditional_chinese.lng
+++ b/station/lang/traditional_chinese.lng
@@ -25,13 +25,36 @@ STR_PARAM_E88A9CA_ENABLE_ROADSTOP_DISABLED  :禁用
 STR_PARAM_E88A9CA_INTRODUCTION_YEAR         :蕪湖站 - 可建造年份
 STR_PARAM_E88A9CA_INTRODUCTION_YEAR_DESC    :選擇蕪湖站從哪一年開始可以被建造。{}{}如果想要擬真的話，您可以把本選項設置爲 2005 年附近的年份。
 
+STR_PARAM_E88A9CA_COLOUR                    :蕪湖站 - 裝飾顏色
+STR_PARAM_E88A9CA_COLOUR_DESC               :選擇蕪湖站的裝飾顏色。現實中的蕪湖站的裝飾部分是白色的，但是晚上會有彩燈顯示各種顏色。
+STR_PARAM_STATION_COLOUR_PRIMARY            :使用公司主色調
+STR_PARAM_STATION_COLOUR_DARK_BLUE          :深藍色
+STR_PARAM_STATION_COLOUR_PALE_GREEN         :淺綠色
+STR_PARAM_STATION_COLOUR_PINK               :粉紅色
+STR_PARAM_STATION_COLOUR_YELLOW             :黃色
+STR_PARAM_STATION_COLOUR_RED                :紅色
+STR_PARAM_STATION_COLOUR_LIGHT_BLUE         :淡藍色
+STR_PARAM_STATION_COLOUR_GREEN              :綠色
+STR_PARAM_STATION_COLOUR_DARK_GREEN         :深綠色
+STR_PARAM_STATION_COLOUR_BLUE               :藍色
+STR_PARAM_STATION_COLOUR_CREAM              :奶油色
+STR_PARAM_STATION_COLOUR_MAUVE              :深紫色
+STR_PARAM_STATION_COLOUR_PURPLE             :紫色
+STR_PARAM_STATION_COLOUR_ORANGE             :橘黃色
+STR_PARAM_STATION_COLOUR_BROWN              :棕色
+STR_PARAM_STATION_COLOUR_GREY               :淺灰色
+STR_PARAM_STATION_COLOUR_WHITE              :白色
+
 STR_PARAM_E88A9C0_ENABLE_MODULAR            :蕪湖站 (1934) - 啓用
 STR_PARAM_E88A9C0_ENABLE_MODULAR_DESC       :選擇是否啓用蕪湖站 (1934)
 STR_PARAM_E88A9C0_ENABLE_MODULAR_ENABLED    :啓用
 STR_PARAM_E88A9C0_ENABLE_MODULAR_DISABLED   :禁用
 
 STR_PARAM_E88A9C0_INTRODUCTION_YEAR         :蕪湖站 (1934) - 可建造年份
-STR_PARAM_E88A9C0_INTRODUCTION_YEAR_DESC    :選擇蕪湖站 (1934)從哪一年開始可以被建造。{}{}如果想要擬真的話，您可以把本選項設置爲 1910 年附近的年份。
+STR_PARAM_E88A9C0_INTRODUCTION_YEAR_DESC    :選擇蕪湖站 (1934) 從哪一年開始可以被建造。{}{}如果想要擬真的話，您可以把本選項設置爲 1910 年附近的年份。
+
+STR_PARAM_E88A9C0_COLOUR                    :蕪湖站 (1934) - 裝飾顏色
+STR_PARAM_E88A9C0_COLOUR_DESC               :選擇蕪湖站 (1934) 的窗戶和門的顏色。
 
 STR_PARAM_E88A9CP_ENABLE_MODULAR            :月台地塊 - 啓用
 STR_PARAM_E88A9CP_ENABLE_MODULAR_DESC       :選擇是否啓用可建造的月台地塊
