(station) cherry-pick langfile updates from #44

--- a/station/lang/traditional_chinese.lng
+++ b/station/lang/traditional_chinese.lng
@@ -187,6 +187,7 @@ STR_STATION_CLASS_E7B981W       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}繁昌西
 
 STR_STATION_CLASS_E88A9CP       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}蕪湖包 - 月台
 
+STR_OBJECT_CLASS_E88A9CB0       :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 蕪湖站 - 站房
 STR_OBJECT_CLASS_E88A9CG        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 蕪湖站 - 西廣場 - 地面
 STR_OBJECT_CLASS_E88A9CF        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 蕪湖站 - 西廣場 - 綠雕
 STR_OBJECT_CLASS_E88A9Cl        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 蕪湖站 - 西廣場 - 草坪
