--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -45,6 +45,17 @@ STR_PARAM_STATION_COLOUR_BROWN              :棕色
 STR_PARAM_STATION_COLOUR_GREY               :浅灰色
 STR_PARAM_STATION_COLOUR_WHITE              :白色
 
+STR_PARAM_E88A9Ca_ENABLE_MODULAR            :芜湖站 (1992) - 启用
+STR_PARAM_E88A9Ca_ENABLE_MODULAR_DESC       :选择是否启用芜湖站 (1992)
+STR_PARAM_E88A9Ca_ENABLE_MODULAR_ENABLED    :启用
+STR_PARAM_E88A9Ca_ENABLE_MODULAR_DISABLED   :禁用
+
+STR_PARAM_E88A9Ca_INTRODUCTION_YEAR         :芜湖站 (1992) - 可建造年份
+STR_PARAM_E88A9Ca_INTRODUCTION_YEAR_DESC    :选择芜湖站 (1992) 从哪一年开始可以被建造。{}{}如果想要拟真的话，您可以把本选项设置为 1980 至 1990 年之间的年份。
+
+STR_PARAM_E88A9Ca_COLOUR                    :芜湖站 (1992) - 装饰颜色
+STR_PARAM_E88A9Ca_COLOUR_DESC               :选择芜湖站 (1992) 的装饰颜色。
+
 STR_PARAM_E88A9C0_ENABLE_MODULAR            :芜湖站 (1934) - 启用
 STR_PARAM_E88A9C0_ENABLE_MODULAR_DESC       :选择是否启用芜湖站 (1934)
 STR_PARAM_E88A9C0_ENABLE_MODULAR_ENABLED    :启用
