--- a/station/lang/traditional_chinese.lng
+++ b/station/lang/traditional_chinese.lng
@@ -45,6 +45,17 @@ STR_PARAM_STATION_COLOUR_BROWN              :棕色
 STR_PARAM_STATION_COLOUR_GREY               :淺灰色
 STR_PARAM_STATION_COLOUR_WHITE              :白色
 
+STR_PARAM_E88A9Ca_ENABLE_MODULAR            :蕪湖站 (1992) - 啓用
+STR_PARAM_E88A9Ca_ENABLE_MODULAR_DESC       :選擇是否啓用蕪湖站 (1992)
+STR_PARAM_E88A9Ca_ENABLE_MODULAR_ENABLED    :啓用
+STR_PARAM_E88A9Ca_ENABLE_MODULAR_DISABLED   :禁用
+
+STR_PARAM_E88A9Ca_INTRODUCTION_YEAR         :蕪湖站 (1992) - 可建造年份
+STR_PARAM_E88A9Ca_INTRODUCTION_YEAR_DESC    :選擇蕪湖站 (1992) 從哪一年開始可以被建造。{}{}如果想要擬真的話，您可以把本選項設置爲 1980 至 1990 年之間的年份。
+
+STR_PARAM_E88A9Ca_COLOUR                    :蕪湖站 (1992) - 裝飾顏色
+STR_PARAM_E88A9Ca_COLOUR_DESC               :選擇蕪湖站 (1992) 的裝飾顏色。
+
 STR_PARAM_E88A9C0_ENABLE_MODULAR            :蕪湖站 (1934) - 啓用
 STR_PARAM_E88A9C0_ENABLE_MODULAR_DESC       :選擇是否啓用蕪湖站 (1934)
 STR_PARAM_E88A9C0_ENABLE_MODULAR_ENABLED    :啓用
