--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -7,6 +7,11 @@ STR_PARAM_INTRODUCTION_YEAR_DESC        :Choose whether each station in this New
 STR_PARAM_INTRODUCTION_YEAR_DISABLED    :Always available
 STR_PARAM_INTRODUCTION_YEAR_ENABLED     :Only available after set year
 
+STR_PARAM_SNOW_TRACK                    :Global - Snow
+STR_PARAM_SNOW_TRACK_DESC               :Choose whether to keep the snow on the ground when beneath a station building.
+STR_PARAM_SNOW_TRACK_ENABLED            :Keep snow
+STR_PARAM_SNOW_TRACK_DISABLED           :Remove snow
+
 STR_PARAM_NIGHT_MODE            :Global - Night mode
 STR_PARAM_NIGHT_MODE_DESC       :Use night graphics suitable for NightGFX
 STR_PARAM_NIGHT_MODE_AUTO_DETECT:Auto Detect
