--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -222,7 +222,8 @@ STR_STATION_CLASS_E7B981W       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}繁昌西
 STR_STATION_CLASS_E88A9CP       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖包 - 站台
 
 STR_OBJECT_CLASS_E88A9CB0       :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 站房
-STR_OBJECT_CLASS_E88A9CG        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 西广场 - 地面
+STR_OBJECT_CLASS_E88A9CG        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 西广场 - 地面 (斜坡)
+STR_OBJECT_CLASS_E88A9Cg        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 西广场 - 地面 (无斜坡)
 STR_OBJECT_CLASS_E88A9CF        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 西广场 - 绿雕
 STR_OBJECT_CLASS_E88A9Cl        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 西广场 - 草坪
 STR_OBJECT_CLASS_E88A9CL        :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 芜湖站 - 西广场 - 路灯
