--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -1,3 +1,5 @@
 ##grflangid 0x01
 STR_GRF_NAME                    :ATHENA - Ahyangyi's Transport Hubs for Enterprise Non-passenger Assets
 STR_GRF_DESC                    :An extra zoom industrial station set.
+
+STR_STATION_CLASS_E5BC8Bf       :{PUSH_COLOUR}{WHITE}ATHENA{POP_COLOUR}
