--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -3,3 +3,5 @@ STR_GRF_NAME                    :ATHENA - Ahyangyi's Transport Hubs for Enterpri
 STR_GRF_DESC                    :An extra zoom industrial station set.
 
 STR_STATION_CLASS_E5BC8Bf       :{PUSH_COLOUR}{WHITE}ATHENA{POP_COLOUR}
+
+STR_CONCRETE_GROUND             :Concrete Ground
