--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -4,4 +4,4 @@ STR_GRF_DESC                    :An extra zoom industrial station set.
 
 STR_STATION_CLASS_E5BC8Bf       :{PUSH_COLOUR}{WHITE}ATHENA{POP_COLOUR}
 
-STR_CONCRETE_GROUND             :Concrete Ground
+STR_STATION_CONCRETE_GROUND     :Concrete Ground
